tests/bad/func_not_found.ae
/// fail: Function not found

def main() {
  foo()
}